--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@worldcoin/minikit-js": "0.0.27-internal-alpha",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@worldcoin/minikit-js": "1.2.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eruda": "^3.2.3",
+    "lucide-react": "^0.460.0",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.4",
+    "ui": "link:@/components/ui"
   },
   "devDependencies": {
     "@types/node": "^20",
