--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "eruda": "^3.2.3",
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
